--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,7 +3,7 @@
 }
 
 :root {
-    --primary-color: #0F1B4C;
+    --header-bg: #10375C;
 }
 
 html, body {
@@ -20,4 +20,68 @@ html {
 body {
     font-size: 1.6rem;
     font-family: 'Sora', sans-serif;
+}
+
+/* Common */
+.container {
+    width: 1170px;
+    max-width: calc(100% - 48px);
+    margin: 0 auto;
+}
+
+a {
+    text-decoration: none;
+}
+
+/* Header */
+.header {
+    min-height: 100vh;
+    background: var(--header-bg);
+}
+
+.logo {
+    font-size: 1rem;
+    position: relative;
+    display: inline-flex;
+}
+
+.logo__circle::before, .logo__circle::after {
+    content: "";
+    display: inline-block;
+    border-radius: 50%;
+
+}
+
+.logo__circle::before {
+    background-color: #2E80CE;
+    height: 3em;
+    width: 3em;
+}
+
+.logo__circle::after {
+    position: absolute;
+    top: 1.1em;
+    left: 1.1em;
+    background-color: #fff;
+    height: 1.6em;
+    width: 1.6em;
+}
+
+.logo__text {
+    color: #fff;
+    text-align: right;
+    margin-left: 0.6em;
+    line-height: 1.5em;
+
+}
+
+.logo__brand {
+    display: block;
+    font-size: 1.8em;
+    font-weight: 400;
+}
+
+.logo__brand--small {
+    font-size: 1.2em;
+    font-weight: 300;
 }
