--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -141,5 +141,90 @@ a {
     font-size: 1.6rem;
     font-weight: 300;
     line-height: 1.75;
-    margin-right: 4.8rem;
+    margin-right: 2.8rem;
+}
+
+/* Hero */
+.hero {
+    margin-top: 7.6rem;
+    display: flex;
+    align-items: center;
+}
+
+.hero__content {
+    width: 44%;
+    flex-shrink: 0;
+}
+
+.hero__heading {
+    color: #FFF;
+    font-family: Sora;
+    font-size: 70px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: 80px;
+    /* 114.286% */
+    letter-spacing: -1.4px;
+}
+
+.hero__desc {
+    color: #C9D2DA;
+    font-family: Sora;
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 300;
+    line-height: 30px;
+    /* 166.667% */
+    margin-top: 22px;
+    display: inline-block;
+}
+
+.hero__btn {
+    /* display: inline-block; */
+}
+
+.hero__phone {
+    color: #FFF;
+    text-align: center;
+    font-family: Sora;
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 30px;
+    /* 166.667% */
+    margin-left: 38px;
+}
+
+.hero__row {
+    display: flex;
+    align-items: center;
+    margin-top: 38px;
+}
+
+.hero__media {
+    flex-grow: 1;
+}
+
+.hero__images {
+    display: flex;
+    align-items: center;
+    justify-content: end;
+}
+
+.hero__img {
+    width: 330px;
+    height: 540px;
+    object-fit: cover;
+    border-radius: 6px;
+}
+
+.hero__img:first-child {
+    position: relative;
+    margin-right: -6px;
+
+}
+
+.hero__img:last-child {
+    width: 210px;
+    height: 410px;
 }
