--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -34,10 +34,32 @@ body {
     background: #2E80CE;
     padding: 1.2rem 2.1rem;
     border-radius: 999px;
+    display: inline-block;
+}
+
+.btn:hover {
+    cursor: pointer;
+    opacity: 0.8;
 }
 
 a {
     text-decoration: none;
+}
+
+.section-heading {
+    color: #10375C;
+    font-size: 5rem;
+    font-weight: 600;
+    line-height: 1.2;
+    letter-spacing: -1px;
+}
+
+.section-desc {
+    color: #575F66;
+    font-size: 1.8rem;
+    font-weight: 300;
+    line-height: 1.66;
+
 }
 
 /* Header */
@@ -227,4 +249,96 @@ a {
 .hero__img:last-child {
     width: 210px;
     height: 410px;
+}
+
+/* service */
+.service {
+    margin-top: 170px;
+    margin-bottom: 170px;
+}
+
+.service__heading {
+    text-align: center;
+}
+
+.service__desc {
+    width: 468px;
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+
+.service-row {
+    margin-top: 70px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.service__img {
+    width: 570px;
+    height: 570px;
+    object-fit: cover;
+    border-radius: 12px;
+}
+
+/* service items */
+.service-item {
+    width: 470px;
+    border-radius: 10px;
+    background: #FFF;
+    padding: 22px;
+    display: flex;
+    transition: 0.3s;
+}
+
+.service-item:hover {
+    box-shadow: 0px 14px 28px 0px rgba(0, 0, 0, 0.05);
+    position: relative;
+}
+
+.service-item:hover .service-item__icon {
+    background-color: #2E80CE;
+    color: #FFF;
+}
+
+.service-item__body {
+    margin-left: 20px;
+}
+
+.service-item__heading {
+    color: #10375C;
+    font-size: 18px;
+    font-weight: 600;
+    line-height: normal;
+}
+
+.service-item__desc {
+    color: #575F66;
+    font-size: 16px;
+    font-weight: 300;
+    line-height: 1.75;
+    /* 175% */
+    width: 351px;
+    margin-top: 8px;
+}
+
+.service-item__icon {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-shrink: 0;
+    width: 60px;
+    height: 60px;
+    background: #EFF6FD;
+    border-radius: 50%;
+    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.05);
+    color: #10375C;
+    transition: 0.3s;
+}
+
+.service-btn {
+    margin-top: 33px;
+    padding: 22px 57px;
 }
