--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -342,3 +342,96 @@ a {
     margin-top: 33px;
     padding: 22px 57px;
 }
+
+/* work */
+.work {
+    padding: 100px 0;
+    background-color: #F6FBFF;
+}
+
+.work__desc {
+    width: 468px;
+}
+
+.work__list {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    margin-top: 70px;
+    column-gap: 30px;
+}
+
+.work-item {
+    padding: 43px 42px;
+    border-radius: 4px;
+    border: 16px solid #EAF6FF;
+    transition: 0.3s;
+}
+
+.work-item:hover {
+    border-color: #2E80CE;
+    transform: translateY(-16px);
+}
+
+.work-item__heading {
+    margin-top: 20px;
+    color: #10375C;
+    font-family: Sora;
+    font-size: 2.6rem;
+    font-weight: 600;
+    line-height: 1.38;
+}
+
+.work-item__desc {
+    font-size: 1.6rem;
+    margin-top: 28px;
+}
+
+.work-item__more {
+    display: inline-block;
+    margin-top: 18px;
+    color: #2E80CE;
+    font-size: 16px;
+    font-weight: 300;
+}
+
+/* feature */
+.feature {
+    margin-top: 85px;
+    padding: 85px 0;
+
+}
+
+.feature__inner {
+    display: flex;
+    column-gap: 130px;
+    align-items: center;
+}
+
+.feature__media {
+    width: 44%;
+}
+
+.feature__images {
+    position: relative;
+    padding: 0 58px 121px 0;
+}
+
+.feature__img {
+    width: 512px;
+    height: 370px;
+    object-fit: cover;
+    border-radius: 6px;
+}
+
+.feature__img:last-child {
+    width: 332px;
+    position: absolute;
+    right: 0;
+    bottom: 0;
+}
+
+
+.feature__cta {
+    margin-top: 38px;
+    padding: 22px 58px;
+}
