--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -442,13 +442,10 @@ a {
     padding: 85px 0;
 }
 
-.member .section-heading {
-    text-align: center;
-}
-
-.member .btn {
-
-    transform: translateX(180%);
+.member__header {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .member__list {
@@ -461,28 +458,44 @@ a {
 
 .member__images {
     border-radius: 6px;
-    border-top: 28px solid #EAF6FF;
-
+    background-color: #EAF6FF;
+    padding-top: 28px;
+    overflow: hidden;
 
 }
 
 .member__img {
     height: 290px;
-    width: 270px;
+    max-width: 100%;
     object-fit: cover;
-    background-color: #EAF6FF;
+    display: block;
 
 }
 
-.member__trans {
+.member__name {
+    display: block;
+    color: #10375C;
+    text-align: center;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 1.75;
+}
+
+.member__desc {
+    color: #575F66;
+    text-align: center;
+    font-size: 14px;
+    font-weight: 300;
+}
+
+.member__control {
     margin-top: 38px;
     display: flex;
-    transform: translateX(180%);
     justify-content: center;
-
+    gap: 18px;
 }
 
-.member__cover {
+.member__control-btn {
     height: 36px;
     width: 36px;
     border: 1px solid #575F66;
@@ -498,7 +511,12 @@ a {
 
 }
 
-.member__cover:hover {
+.member__control-btn:hover {
     background-color: #2E80CE;
     color: #FFF;
+    border-color: #2E80CE;
+}
+
+.member__control--next-icon {
+    rotate: 180deg;
 }
