--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -29,6 +29,11 @@ body {
     margin: 0 auto;
 }
 
+input, textarea, select, button {
+    font-family: inherit;
+    font-size: inherit;
+}
+
 .btn {
     color: #fff;
     background: #2E80CE;
@@ -114,6 +119,7 @@ a {
     display: block;
     font-size: 1.8em;
     font-weight: 400;
+    font-family: Sora;
 }
 
 .logo__brand--small {
@@ -657,6 +663,7 @@ a {
 }
 
 .appointment__body {
+    padding: 100px 0 115px 0;
     display: flex;
     align-items: center;
     flex-direction: column;
@@ -694,4 +701,125 @@ a {
 .appointment__cta {
     padding: 22px 58px;
     margin-top: 38px;
+}
+
+/* footer */
+.footer {
+    background: #10375C;
+    padding-top: 100px;
+    font-family: 'Open Sans', sans-serif;
+
+}
+
+.footer__row {
+    display: grid;
+    grid-template-columns: 1fr 0.4fr 0.4fr 1fr;
+    column-gap: 78px;
+}
+
+.footer__desc {
+    margin-top: 20px;
+    color: #A9B3BB;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 1.75;
+}
+
+.footer__heading {
+    color: #FFF;
+    font-size: 16px;
+    font-weight: 600;
+    line-height: 1.75;
+    margin-bottom: 20px;
+
+}
+
+.footer__link {
+    color: #A9B3BB;
+    font-size: 14px;
+    display: inline-block;
+    white-space: nowrap;
+}
+
+.footer__link:hover {
+    color: #FFF;
+}
+
+.footer__item {
+    margin-bottom: 10px;
+}
+
+.footer__list {
+    margin-bottom: 18px;
+}
+
+.footer__social {
+    display: flex;
+    column-gap: 10px;
+    margin-bottom: 28px;
+}
+
+.social--btn {
+    width: 32px;
+    height: 32px;
+    border-radius: 50%;
+    background-color: #FFF;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: #2E80CE;
+    transition: 0.3s;
+
+}
+
+.social--btn:hover {
+    color: #FFF;
+    background-color: #2E80CE;
+}
+
+.footer-form {
+    margin-top: 10px;
+    display: flex;
+    align-items: center;
+    column-gap: 12px;
+}
+
+.footer-form__input {
+    width: 212px;
+    height: 46px;
+    outline: none;
+    border-radius: 4px;
+    border: 1px solid #406181;
+    background: transparent;
+    padding: 0 10px;
+    color: #fff;
+}
+
+.footer-form__submit {
+    border-radius: 4px;
+    background: #2E80CE;
+    min-width: 108px;
+    height: 46px;
+    border: none;
+    font-size: 1.4rem;
+}
+
+.footer-form__input::placeholder {
+    color: #9CA8B1;
+    font-size: 1.4rem;
+    font-weight: 400;
+}
+
+.footer__copyright {
+    margin-top: 28px;
+    padding: 28px 0 42px 0;
+    border-top: 1px solid #575F66;
+
+}
+
+.footer__copyright-text {
+    color: #AAB3BA;
+    text-align: center;
+    font-size: 1.4rem;
+    font-weight: 400;
 }
